<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="Login"
        android:textAppearance="?android:textAppearanceMedium"
        android:textStyle="bold"
        android:layout_marginTop="30dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textusername"
        android:text="@string/username"
        android:layout_marginTop="85dp"
        android:layout_marginLeft="10dp"/>
    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editUsername"
        android:inputType="text"
        android:layout_toRightOf="@+id/textusername"
        android:layout_marginTop="60dp"
        android:layout_marginLeft="20dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/textpassword"
        android:text="@string/password"
        android:layout_marginTop="125dp"
        android:layout_marginLeft="10dp"/>

    <EditText
        android:layout_width="250dp"
        android:layout_height="wrap_content"
        android:id="@+id/editPassword"
        android:inputType="textPassword"
        android:layout_toRightOf="@+id/textpassword"
        android:layout_marginTop="100dp"
        android:layout_marginLeft="20dp"/>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/ButtonLogin"
        android:text="@string/login"
        android:layout_marginTop="180dp"
        android:layout_centerHorizontal="true"
        android:background="@drawable/bg_button"/>


</RelativeLayout>